# Programacion-Estructurada-C

./: CMakeLists.txt  Constitucion-estructura.c  README.md
Ejercicio 2/: CMakeLists.txt  uniones.c
Ejercicio 3/: CMakeLists.txt  Copia-estructuras.c
Ejercicio 4/: CMakeLists.txt  typedef.c
Ejercicio 5/: CMakeLists.txt  Direccionarg.c  Orientada-a-objetos.cpp  Por-referencia.c  Valor-por-arg.c
Ejercicio-1/: CMakeLists.txt  Estructura.c  Instanciacion-estructuras.c  Instanciacion-malloc.c  Programa-Principal.c  Punteros.c
